# Pena_Gabriel_ExamenCPP

./: CMakeLists.txt  README.md  main.cpp
Ejercicio 1/: Identificacion.cpp  Identificacion.h
Ejercicio 2/: Dia_semana.cpp  Dia_semana.h
Ejercicio 3/: Notas.cpp  Notas.h  funciones.cpp  funciones.h
Ejercicio 4/: Operaciones.cpp  Operaciones.h  Promocion.cpp  Promocion.h
