cmake_minimum_required(VERSION 3.29)
project(Pena_Gabriel_ExamenCPP)

set(CMAKE_CXX_STANDARD 14)

add_executable(Pena_Gabriel_ExamenCPP
    main.cpp
        "Ejercicio 1/Identificacion.h"
        "Ejercicio 1/Identificacion.cpp"
        "Ejercicio 2/Dia_semana.h"
        "Ejercicio 2/Dia_semana.cpp"
        "Ejercicio 3/funciones.h"
        "Ejercicio 3/funciones.cpp"
        "Ejercicio 3/Notas.h"
        "Ejercicio 3/Notas.cpp")
